# ferrox

./: .gitignore  Cargo.toml  Dockerfile  README.md  ferrox.toml.example  ferrox.yml
.github/workflows/: rust.yml
src/: config.rs  main.rs  server.rs
src/handlers/: static_files.rs
src/http/: error.rs  request.rs  response.rs
src/utils/: logger.rs  mod.rs  templates.rs
templates/: error.html  indexing.html
www/: index.html
