[package]
name = "ferrox"
version = "0.5.4"
edition = "2024"

[dependencies]
html-escape = "0.2.13"
mime_guess = "2.0.5"
time = "0.3.47"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
urlencoding = "2"